apps/myspotify/resources/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-spotify
  namespace: your-spotify
  labels:
    app: your-spotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: your-spotify
  template:
    metadata:
      labels:
        app: your-spotify
    spec:
      containers:
        - name: your-spotify
          image: yooooomi/your_spotify_server
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
