apps/myspotify/resources/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-spotify
  namespace: your-spotify
spec:
  selector:
    app: your-spotify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
